--- a/css/responsive.css
+++ b/css/responsive.css
@@ -16,11 +16,18 @@
         display: flex;
         justify-content: space-around;
     }
+
+    .purple-flex{
+        display: flex;
+        justify-content: end;
+        align-content: space-between;
+        padding-top: 50px;
+    }
 }
 
 
 @media screen and (min-width: 768px) {
-    .disp-flex-column{
+    .disp-flex-column:first-child{
         flex-direction: row;
     }
 
