--- a/css/responsive.css
+++ b/css/responsive.css
@@ -43,6 +43,14 @@
     .small-box:nth-child(2){
         min-height: 550px;
     }
+
+    .testimonials{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: row;
+        flex-wrap: nowrap;
+    }
 }
 
 
