--- a/css/style.css
+++ b/css/style.css
@@ -131,3 +131,11 @@ header i{
 .padding-bt{
     padding-bottom: 50px;
 }
+
+/*testimonials*/
+.testimonials{
+    width: 100%;
+    padding: 20px 10px;
+    text-align: center;
+    color: white;
+}
