--- a/css/style.css
+++ b/css/style.css
@@ -31,9 +31,12 @@
 .disp-flex-column{
     display: flex;
     justify-content: space-between;
-    align-items: center;
     flex-direction: column;
     flex-wrap: wrap;
+}
+
+.align-center{
+    align-items: center;
 }
 
 .button{
@@ -139,3 +142,15 @@ header i{
     text-align: center;
     color: white;
 }
+
+/*benefits*/
+.benefits{
+    width: 100%;
+    height: 300px;
+}
+
+.benefits h2, .benefits h3{
+    color: var(--lightpurple);
+}
+
+/*aboutus*/
