--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,33 +1,9 @@
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 480px) {
 
 }
-
-
-@media screen and (min-width: 992px) {
-    .container{
-    width: 85%;
-    }
-
-    .burger{
-        display: none;
-    }
-
-    .nav-bar{
-        display: flex;
-        justify-content: space-around;
-    }
-
-    .purple-flex{
-        display: flex;
-        justify-content: end;
-        align-content: space-between;
-        padding-top: 50px;
-    }
-}
-
 
 @media screen and (min-width: 768px) {
-    .disp-flex-column:first-child{
+    .first-part .disp-flex-column{
         flex-direction: row;
     }
 
@@ -51,9 +27,43 @@
         flex-direction: row;
         flex-wrap: nowrap;
     }
+
+    .benefits{
+        width: 48%;
+    }
+
+    .benefits-dad .disp-flex-column{
+        flex-direction: row;
+    }
 }
 
+@media screen and (min-width: 992px) {
+    .container{
+    width: 85%;
+    }
 
-@media screen and (min-width: 480px) {
+    .burger{
+        display: none;
+    }
+
+    .nav-bar{
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .purple-flex{
+        display: flex;
+        justify-content: end;
+        align-content: space-between;
+        padding-top: 50px;
+    }
+
+    .benefits{
+        width: 30%;
+    }
+
+}
+
+@media screen and (min-width: 1200px) {
 
 }
