--- a/css/responsive.css
+++ b/css/responsive.css
@@ -35,6 +35,10 @@
     .benefits-dad .disp-flex-column{
         flex-direction: row;
     }
+    
+    .about-us{
+        flex-direction: row;
+    }
 }
 
 @media screen and (min-width: 992px) {
