--- a/css/responsive.css
+++ b/css/responsive.css
@@ -13,11 +13,6 @@
 
     .small-box{
         width: calc(30%);
-        min-height: 450px;
-    }
-
-    .small-box:nth-child(2){
-        min-height: 550px;
     }
 
     .testimonials{
@@ -65,6 +60,16 @@
     .benefits{
         width: 30%;
     }
+
+    .first-part .big-box{
+        flex-direction: row;
+    }
+
+    .first-part img, .first-part .big-p{
+        width: 50%;
+    }
+
+    
 
 }
 
