--- a/css/style.css
+++ b/css/style.css
@@ -78,12 +78,16 @@
 }
 
 .container{
-    width: 95%;
+    width: 90%;
     margin: auto;
 }
 
 .margin-btm{
     margin-bottom: 40px;
+}
+
+.margin-auto{
+    margin: auto;
 }
 
 .padd10{
@@ -156,7 +160,8 @@ header i{
 }
 
 .first-part a{
-    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
     color: white;
 }
 
@@ -171,6 +176,7 @@ header i{
 
 .planning h2{
     font-size: 40px;
+    line-height: 50px;
 }
 
 .planning1 *{
@@ -185,32 +191,83 @@ header i{
 
 
 /*testimonials*/
+.big-testimonials{
+    text-align: center;
+}
+
 .testimonials{
     width: 100%;
     padding: 20px 10px;
     text-align: center;
     color: white;
+    align-items: center;
 }
 .testimonials img{
     height: 150px;
     width: 150px;
     border-radius: 50%;
-
+    object-fit: cover;
 }
 
+.big-testimonials h2{
+    color: var(--lightpurple);
+}
 
+.big-testimonials h3{
+    font-weight: lighter;
+}
 
 /*benefits*/
+.benefits-dad{
+    text-align: center;
+}
+
+.benefits-dad > h3{
+    color: white;
+    font-size: 38px;
+    padding-top: 20px;
+    line-height: 45px;
+}
+
 .benefits{
     width: 100%;
-    height: 300px;
+    text-align: left;
 }
 
 .benefits h2, .benefits h3{
     color: var(--lightpurple);
 }
 
+.benefits h2{
+    font-size: 45px;
+    padding-top: 30px;
+}
+
+.benefits-btn{
+    padding: 10px 30px;
+    color: white;
+    margin:auto;
+}
+
 /*aboutus*/
+.about-us h2{
+    font-size: 38px;
+    color: var(--lightpurple);
+}
+
+.about-us h3{
+    font-size: 30px;
+    color: var(--lightpurple);
+    line-height: 40px;
+}
+
 .about-us img{
     width: 100%;
+}
+
+.about-us img{
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    object-fit: cover;
 }
