--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,7 +1,3 @@
-@media screen and (min-width: 480px) {
-
-}
-
 @media screen and (min-width: 768px) {
     .first-part .disp-flex-column{
         flex-direction: row;
@@ -33,6 +29,41 @@
     
     .about-us{
         flex-direction: row;
+    }
+    
+    .about-us .about-us-media{
+        display: flex;
+    }
+
+    .about-us-p{
+        width: 60%;
+        padding: 0 10px;
+    }
+
+    .about-us-linkedin{
+        width: 40%;
+        padding: 0 10px;
+    }
+
+    .about-us-linkedin a{
+        margin-left: 0;
+    }
+
+    .about-us-linkedin img{
+        width: 300px;
+        height: 300px;
+    }
+
+    .about-us h2{
+        font-size: 60px;
+    }
+
+    .get-started h3{
+        font-size: 30px;
+    }
+
+    .get-started h2{
+        font-size: 70px;
     }
 }
 
@@ -69,10 +100,8 @@
         width: 50%;
     }
 
-    
-
-}
-
-@media screen and (min-width: 1200px) {
-
+    .planning2{
+        margin-left: 100px;
+        margin-top: 200px;
+    }
 }
